<resources>
    <string name="app_name">Map Race</string>
    <string name="start_game">Start Game</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="username">Username</string>
    <string name="get_started_by_creating_a_user_profile">Get started by creating a user profile</string>
    <string name="create">Create</string>
    <string name="n_a">N/A</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="best_time">Best time:</string>
    <string name="map_race">Map Race</string>
    <string name="game_mode">Game Mode</string>
    <string name="edit">Edit</string>
    <string name="longest_distance">Longest Distance:</string>
    <string name="preferences">Preferences</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="exit">Exit</string>
    <string name="time">Time</string>
    <string name="goals">Goals</string>
    <string name="share_my_score">Share my score</string>
    <string name="clear_records">Clear Records</string>
    <string name="maximum_distance">Maximum Landmark Distance (km)</string>
</resources>
