<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onExitProfile"
            android:text="@string/exit"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/container_padding"
        android:paddingVertical="@dimen/container_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/padding_large">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/blank_profile" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/n_a"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/editProfileButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onEditUsername"
                android:text="@string/edit"
                android:textSize="15sp"
                app:icon="@drawable/ic_edit" />

            <LinearLayout
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_clock"
                    android:contentDescription="@string/best_time" />
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/bestTimeText"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:text="@string/best_time"/>

                <TextView
                    android:id="@+id/bestTime"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_map"
                    android:contentDescription="@string/longest_distance" />
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/distText"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:text="@string/longest_distance"/>
                <TextView
                    android:id="@+id/longestDistance"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_caption"
                    android:text="@string/share_my_score"
                    android:layout_marginBottom="@dimen/margin_medium"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="@dimen/padding_small">
                    <com.example.maprace.component.FacebookButton
                        android:id="@+id/facebookButton"
                        android:layout_gravity="center_vertical"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="@dimen/margin_medium"/>
                    <com.example.maprace.component.TwitterButton
                        android:id="@+id/twitterButton"
                        android:layout_gravity="center_vertical"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="@dimen/margin_medium"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onClearRecords"
                android:text="@string/clear_records"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/padding_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/game_mode"
                    android:textSize="@dimen/text_size_caption" />

                <RadioGroup
                    android:id="@+id/gameModeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/walkModeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/walk" />

                    <RadioButton
                        android:id="@+id/bikeModeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/bike" />

                    <RadioButton
                        android:id="@+id/carModeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/car" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/preferences"
                    android:textSize="@dimen/text_size_caption" />

                <LinearLayout
                    android:id="@+id/preferencesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/maximum_distance"
                    android:textSize="@dimen/text_size_caption" />

                <Button
                    android:id="@+id/maxDistanceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="onEditMaxDistance"
                    android:text="@string/n_a"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_large">

            <Button
                android:id="@+id/resetProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onResetSettings"
                android:text="@string/reset_settings"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/deleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onDeleteProfile"
                android:text="@string/delete_profile"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>