<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:onClick="onExitGame"
                android:text="@string/exit" />

            <ImageView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/time"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:src="@drawable/timer" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/goals"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:src="@drawable/flag" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:text="@string/n_a"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/gameModeIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/game_mode"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:src="@drawable/walk" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:text="@string/n_a"
                android:textSize="20sp" />
        </LinearLayout>

        <org.osmdroid.views.MapView android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mapFocusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/margin_medium"
        app:srcCompat="@drawable/map_focus"
        android:onClick="onLocationFocus"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

